# vercel-benchmarks

./: .gitignore  .vercelignore  Cargo.toml  README.md  package.json  vercel.json
api/go/: simple.go
api/node/: simple.ts
api/python/: simple.py
api/rust/: simple.rs
results/: setup1.ipynb  setup2.ipynb  setup3.ipynb
results/scripts/: util.py
results/setup1/: setup.txt
results/setup1/simple/go/: 2023-07-05_10-30-18.csv  2023-07-05_11-30-18.csv  2023-07-05_12-30-18.csv  2023-07-05_13-30-21.csv  2023-07-05_14-30-19.csv  2023-07-05_15-31-03.csv  2023-07-05_16-31-14.csv  2023-07-05_17-30-20.csv  2023-07-05_18-30-19.csv
results/setup1/simple/node/: 2023-07-05_10-30-01.csv  2023-07-05_11-30-01.csv  2023-07-05_12-30-01.csv  2023-07-05_13-30-01.csv  2023-07-05_14-30-01.csv  2023-07-05_15-30-01.csv  2023-07-05_16-30-01.csv  2023-07-05_17-30-01.csv  2023-07-05_18-30-02.csv
results/setup1/simple/python/: 2023-07-05_10-30-36.csv  2023-07-05_11-30-35.csv  2023-07-05_12-30-36.csv  2023-07-05_13-30-38.csv  2023-07-05_14-30-37.csv  2023-07-05_15-32-11.csv  2023-07-05_16-32-18.csv  2023-07-05_17-30-40.csv  2023-07-05_18-30-37.csv
results/setup1/simple/rust/: 2023-07-05_10-30-54.csv  2023-07-05_11-30-53.csv  2023-07-05_12-30-55.csv  2023-07-05_13-30-54.csv  2023-07-05_14-30-56.csv  2023-07-05_15-33-15.csv  2023-07-05_16-33-18.csv  2023-07-05_17-31-00.csv  2023-07-05_18-30-58.csv
results/setup2/: setup.txt
results/setup2/simple/go/: 2023-07-06_17-07-12.csv  2023-07-06_18-07-10.csv  2023-07-06_20-07-11.csv  (+12 more)
results/setup3/: setup.txt
scripts/: run-tests.sh
(+92 files in other folders)
