[package]
name = "verce-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
vercel_runtime = "1"

[[bin]]
name = "api-simple"
path = "api/rust/simple.rs"